force-app/main/default/objects/Product_Utility_Setting__mdt/Product_Utility_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Product Utility Setting</label>
    <pluralLabel>Product Utility Settings</pluralLabel>
</CustomObject>