force-app/main/default/objects/Product_Utility_Setting__mdt/fields/Child_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Name__c</fullName>
    <label>Child Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>