force-app/main/default/objects/Product_Utility_Setting__mdt/fields/DisplayFields__c.field-meta.xml
<CustomField>
    <fullName>DisplayFields__c</fullName>
    <label>Display Fields</label>
    <type>TextArea</type>
</CustomField>