force-app/main/default/objects/Product_Utility_Setting__mdt/fields/UpdateFields__c.field-meta.xml
<CustomField>
    <fullName>UpdateFields__c</fullName>
    <label>Update Fields</label>
    <type>TextArea</type>
</CustomField>